<resources>
    <string name="app_name">accelerometer</string>
    <string name="delete">Delete</string>
    <string name="start">Start</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="apply">Apply</string>
    <string name="slow">slow</string>
    <string name="delays">Delays</string>
    <string name="xaxis">XAXIS</string>
    <string name="yaxis">YAXIS</string>
    <string name="stop">Stop</string>
    <string name="zaxis">ZAXIS</string>
</resources>